--- a/tests/data/email.html
+++ b/tests/data/email.html
@@ -1,5 +1,9 @@
 <h2>Busso is failing</h2>
 
-<pre><code>  File &#34;C:\Users\me\Dropbox\felix\test.py&#34;, line 11, in test_alert_email
+<pre><code>Traceback (most recent call last):
+
+  File &#34;C:\Users\me\Dropbox\felix\test.py&#34;, line 11, in test_alert_email
     raise Exception(&#34;What the heck?&#34;)
+
+Exception: What the heck?
 </code></pre>
